レスポンシブ対応１

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -28,22 +28,41 @@ body{
       .title{
         display: flex;
         justify-content: center;
-        font-size: 50px;
+        font-size: 3.5rem;
         color: #333333;
         font-family: 'Courier New',sans-serif;
-        padding-top: 30px;
+        padding: 30px;
+      }
+
+      @media screen and (min-width:375px){
+        .title{
+          font-size: 1.8rem;
+          
+        }
+      }
+
+      @media screen and (min-width:700px){
+        .title{
+          font-size: 2.5rem;
+        }
+      }
+
+      @media screen and (min-width:1000px){
+        .title{
+          font-size: 3rem;
+          padding-top: 30px;
+        }
       }
 
       .niko-chan{
-        height: 60px;
-        width: 90px;
+        width: 7%;
       }
 
       .menu{
         list-style: none;
         
         .sub-title{
-          font-size: 20px;
+          font-size: 1.2rem;
           display: inline-block;
           
           margin-top: 55px;
@@ -56,8 +75,33 @@ body{
             padding: 0 15px 0 18px;
           }
         }
+
+        @media screen and (min-width:375px){
+          .sub-title{font-size: 0.7rem;}
+        }
+
+        @media screen and (min-width:700px){
+          .sub-title{font-size: 0.8rem;}
+        }
+
+        @media screen and (min-width:1000px){
+          .sub-title{font-size: 1.2rem;}
+        }
+        
         .sub-title:last-child{
           border-right: solid 1px lightgray;
+        }
+
+        @media screen and (min-width:375px){
+          .sub-title{font-size: 0.7rem;}
+        }
+
+        @media screen and (min-width:700px){
+          .sub-title{font-size: 0.8rem;}
+        }
+
+        @media screen and (min-width:1000px){
+          .sub-title{font-size: 1.2rem;}
         }
       }
     }
@@ -73,16 +117,27 @@ body{
       text-align: center;
 
       .profile{
-        font-size: 45px;
+        font-size: 3rem;
         font-weight: bold;
         font-family: 'Courier New',sans-serif;
         margin-left: 15px;
       }
 
+      @media screen and (min-width:375px){
+        .profile{font-size: 1.8rem;}
+      }
+
+      @media screen and (min-width:700px) and (max-width:999px){
+        .profile{font-size: 2.5rem;}
+      }
+
+      @media screen and (min-width:1000px){
+        .profile{font-size: 3rem;}
+      }
+
       .photo{
-        width: 570px;
-        height: 430px;
-        border-radius: 15px;
+        width: 80%;
+        border-radius: 30%;
         margin-top: 40px;
         box-shadow: 5px 10px 20px rgba(0,0,0,0.25);
       }
@@ -117,6 +172,19 @@ body{
           display: inline-block;
         }
       }
+
+      @media screen and (min-width:375px){
+        .profile{font-size: 1.8rem;}
+      }
+
+      @media screen and (min-width:700px) and (max-width:999px){
+        .profile{font-size: 2.5rem;}
+      }
+
+      @media screen and (min-width:1000px){
+        .profile{font-size: 3rem;}
+      }
+
 
       .right-content:before {  
         content: "";
@@ -163,8 +231,20 @@ body{
       font-family: 'Courier New',sans-serif;
     }
 
+    @media screen and (min-width:375px){
+      .collection{font-size: 2rem;}
+    }
+
+    @media screen and (min-width:700px) and (max-width:999px){
+      .collection{font-size: 3rem;}
+    }
+
+    @media screen and (min-width:1000px){
+      .collection{font-size: 3.5rem;}
+    }
+
     .fab{
-      font-size: 45px;
+      font-size: 300%;
       padding: 15px;
     }
   }
@@ -181,6 +261,7 @@ body{
         position: relative;
         margin: 6%;
         text-align: center;
+        box-sizing: border-box;
         
 
 
@@ -191,6 +272,7 @@ body{
           bottom: 15px;
           font-family: 'ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
           color: #333333;
+          line-height: 0.1rem;
         }
 
         .collection-img{
@@ -280,7 +362,8 @@ body{
 
 
 .container {
-  margin-top: 100px;
+  margin-top: 15px;
+  margin-bottom: 5px;
   overflow: hidden;
   box-sizing: border-box;
 }
