--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -44,15 +44,33 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-size: 50px;
+  font-size: 3.5rem;
   color: #333333;
   font-family: 'Courier New',sans-serif;
-  padding-top: 30px;
+  padding: 30px;
+}
+
+@media screen and (min-width: 375px) {
+  .box .content1-box .content1 .title {
+    font-size: 1.8rem;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .box .content1-box .content1 .title {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .box .content1-box .content1 .title {
+    font-size: 3rem;
+    padding-top: 30px;
+  }
 }
 
 .box .content1-box .content1 .niko-chan {
-  height: 60px;
-  width: 90px;
+  width: 7%;
 }
 
 .box .content1-box .content1 .menu {
@@ -60,7 +78,7 @@ body {
 }
 
 .box .content1-box .content1 .menu .sub-title {
-  font-size: 20px;
+  font-size: 1.2rem;
   display: inline-block;
   margin-top: 55px;
   font-family: 'Courier New',sans-serif;
@@ -73,8 +91,44 @@ body {
   padding: 0 15px 0 18px;
 }
 
+@media screen and (min-width: 375px) {
+  .box .content1-box .content1 .menu .sub-title {
+    font-size: 0.7rem;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .box .content1-box .content1 .menu .sub-title {
+    font-size: 0.8rem;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .box .content1-box .content1 .menu .sub-title {
+    font-size: 1.2rem;
+  }
+}
+
 .box .content1-box .content1 .menu .sub-title:last-child {
   border-right: solid 1px lightgray;
+}
+
+@media screen and (min-width: 375px) {
+  .box .content1-box .content1 .menu .sub-title {
+    font-size: 0.7rem;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .box .content1-box .content1 .menu .sub-title {
+    font-size: 0.8rem;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .box .content1-box .content1 .menu .sub-title {
+    font-size: 1.2rem;
+  }
 }
 
 .box .big-content {
@@ -91,16 +145,33 @@ body {
 }
 
 .box .big-content .left-content .profile {
-  font-size: 45px;
+  font-size: 3rem;
   font-weight: bold;
   font-family: 'Courier New',sans-serif;
   margin-left: 15px;
 }
 
+@media screen and (min-width: 375px) {
+  .box .big-content .left-content .profile {
+    font-size: 1.8rem;
+  }
+}
+
+@media screen and (min-width: 700px) and (max-width: 999px) {
+  .box .big-content .left-content .profile {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .box .big-content .left-content .profile {
+    font-size: 3rem;
+  }
+}
+
 .box .big-content .left-content .photo {
-  width: 570px;
-  height: 430px;
-  border-radius: 15px;
+  width: 80%;
+  border-radius: 30%;
   margin-top: 40px;
   -webkit-box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.25);
           box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.25);
@@ -145,6 +216,24 @@ body {
 
 .box .big-content .right-box .right-content .answer {
   display: inline-block;
+}
+
+@media screen and (min-width: 375px) {
+  .box .big-content .right-box .profile {
+    font-size: 1.8rem;
+  }
+}
+
+@media screen and (min-width: 700px) and (max-width: 999px) {
+  .box .big-content .right-box .profile {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .box .big-content .right-box .profile {
+    font-size: 3rem;
+  }
 }
 
 .box .big-content .right-box .right-content:before {
@@ -195,8 +284,26 @@ body {
   font-family: 'Courier New',sans-serif;
 }
 
+@media screen and (min-width: 375px) {
+  .box .title-box .collection {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (min-width: 700px) and (max-width: 999px) {
+  .box .title-box .collection {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .box .title-box .collection {
+    font-size: 3.5rem;
+  }
+}
+
 .box .title-box .fab {
-  font-size: 45px;
+  font-size: 300%;
   padding: 15px;
 }
 
@@ -217,6 +324,8 @@ body {
   position: relative;
   margin: 6%;
   text-align: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .box .collection-wrap .collection-box .image-box .text {
@@ -226,6 +335,7 @@ body {
   bottom: 15px;
   font-family: 'ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
   color: #333333;
+  line-height: 0.1rem;
 }
 
 .box .collection-wrap .collection-box .image-box .collection-img {
@@ -341,7 +451,8 @@ body {
 }
 
 .container {
-  margin-top: 100px;
+  margin-top: 15px;
+  margin-bottom: 5px;
   overflow: hidden;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
