--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,9 +1,7 @@
 @import "./mixin.scss";
-
 *{
   box-sizing: border-box;
 }
-
 body{
   padding: 0;
   margin: 0;
@@ -28,31 +26,10 @@ body{
       .title{
         display: flex;
         justify-content: center;
-        font-size: 3.5rem;
         color: #333333;
         font-family: 'Courier New',sans-serif;
-        padding: 30px;
       }
 
-      @media screen and (min-width:375px){
-        .title{
-          font-size: 1.8rem;
-          
-        }
-      }
-
-      @media screen and (min-width:700px){
-        .title{
-          font-size: 2.5rem;
-        }
-      }
-
-      @media screen and (min-width:1000px){
-        .title{
-          font-size: 3rem;
-          padding-top: 30px;
-        }
-      }
 
       .niko-chan{
         width: 7%;
@@ -62,7 +39,6 @@ body{
         list-style: none;
         
         .sub-title{
-          font-size: 1.2rem;
           display: inline-block;
           
           margin-top: 55px;
@@ -75,33 +51,8 @@ body{
             padding: 0 15px 0 18px;
           }
         }
-
-        @media screen and (min-width:375px){
-          .sub-title{font-size: 0.7rem;}
-        }
-
-        @media screen and (min-width:700px){
-          .sub-title{font-size: 0.8rem;}
-        }
-
-        @media screen and (min-width:1000px){
-          .sub-title{font-size: 1.2rem;}
-        }
-        
         .sub-title:last-child{
           border-right: solid 1px lightgray;
-        }
-
-        @media screen and (min-width:375px){
-          .sub-title{font-size: 0.7rem;}
-        }
-
-        @media screen and (min-width:700px){
-          .sub-title{font-size: 0.8rem;}
-        }
-
-        @media screen and (min-width:1000px){
-          .sub-title{font-size: 1.2rem;}
         }
       }
     }
@@ -110,29 +61,15 @@ body{
   .big-content{
     display: flex;
     width: 100%;
+    align-items: center;
 
     .left-content{
-      height: 100vh;
-      width: 55%;
       text-align: center;
 
       .profile{
-        font-size: 3rem;
         font-weight: bold;
         font-family: 'Courier New',sans-serif;
         margin-left: 15px;
-      }
-
-      @media screen and (min-width:375px){
-        .profile{font-size: 1.8rem;}
-      }
-
-      @media screen and (min-width:700px) and (max-width:999px){
-        .profile{font-size: 2.5rem;}
-      }
-
-      @media screen and (min-width:1000px){
-        .profile{font-size: 3rem;}
       }
 
       .photo{
@@ -148,17 +85,15 @@ body{
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      width: 45%;
+      
 
       .right-content{
         background-color: white;
         font-family: 'ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
         width: 80%;
         border-radius: 20px;
-        margin: 15px 0;
         position: relative;
         box-shadow: 4px 4px 4px #333333;
-        padding: 15px;
         color: #333333;
 
         .introduction{
@@ -173,18 +108,6 @@ body{
         }
       }
 
-      @media screen and (min-width:375px){
-        .profile{font-size: 1.8rem;}
-      }
-
-      @media screen and (min-width:700px) and (max-width:999px){
-        .profile{font-size: 2.5rem;}
-      }
-
-      @media screen and (min-width:1000px){
-        .profile{font-size: 3rem;}
-      }
-
 
       .right-content:before {  
         content: "";
@@ -196,7 +119,7 @@ body{
         background: white;
         border-radius: 50%;
       }
-      
+  
       .right-content:after {
         content: "";
         position: absolute;
@@ -209,7 +132,6 @@ body{
       }
     }
   }
-
 
   .title-box{
     width: 100%;
@@ -231,18 +153,6 @@ body{
       font-family: 'Courier New',sans-serif;
     }
 
-    @media screen and (min-width:375px){
-      .collection{font-size: 2rem;}
-    }
-
-    @media screen and (min-width:700px) and (max-width:999px){
-      .collection{font-size: 3rem;}
-    }
-
-    @media screen and (min-width:1000px){
-      .collection{font-size: 3.5rem;}
-    }
-
     .fab{
       font-size: 300%;
       padding: 15px;
@@ -250,16 +160,14 @@ body{
   }
 
   .collection-wrap{
-    display: flex;
-    justify-content: space-around;
+    // display: flex;
+    // justify-content: space-around;
 
     .collection-box{
-      width: 100%;
-      margin-top : 30px;
+      // margin-top : 30px;
 
       .image-box{
         position: relative;
-        margin: 6%;
         text-align: center;
         box-sizing: border-box;
         
@@ -276,8 +184,6 @@ body{
         }
 
         .collection-img{
-          height: 300px;
-          width: 350px;
           border-radius: 15px;
           border: 10px solid #fff;
           border-bottom: 90px solid #fff;
@@ -299,9 +205,8 @@ body{
       font-weight: bold;
       color: #333333;
       font-size: 50px;
-      margin: 10px;
       height: 20vh;
-      line-height: 150px;
+      line-height: 270px;
     }
 
     .gallerybox{
@@ -310,48 +215,53 @@ body{
       background-color:white;
 
       .image-text{
-        padding: 10px;
         font-family: 'ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
       }
     }
   }
 }
 
-.footer{
-  height: 60px;
-  width: 100%;
-  background-color: rgb(255, 215, 1);
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  line-height: 60px;
 
-  .niko-chan{
-    width: 50px;
-    height:40px;
-    text-align: center;
-    vertical-align: middle;
-  }
+// .footer{
+//   height: 60px;
+//   width: 100%;
+//   background-color: rgb(255, 215, 1);
+//   display: flex;
+//   justify-content: center;
+//   text-align: center;
+//   line-height: 60px;
+
+//   .niko-chan{
+//     width: 50px;
+//     height:40px;
+//     text-align: center;
+//     vertical-align: middle;
+//   }
   
-  .footer-name{
-    margin: 0;
-  }
-}
+//   .footer-name{
+//     margin: 0;
+//   }
+// }
 
 
 
 :root {
   --numOfListA: 9;
-  --imgW: 350px;
+  --imgW: 250px;
   --imgH: var(--imgW);
   --mBetweenImg: 50px;
 }
-@media screen and (min-width: 900px) {:root {--imgW: 350px;}}
-.slider-container {
-  font-size: 0;
-  white-space: nowrap;
-  animation: slideshow 30s linear infinite;
+@media screen and (min-width: 350px){
+  :root {--imgW: 250px;}
 }
+  .slider-container {
+    font-size: 0;
+    white-space: nowrap;
+    animation: slideshow 30s linear infinite;
+  }
+
+
+
 .slider-img {
   width: var(--imgW);
   height:  var(--imgH);
@@ -367,3 +277,246 @@ body{
   overflow: hidden;
   box-sizing: border-box;
 }
+
+@media screen and (min-width:375px) {
+  .sub-title{
+    font-size: 0.7rem;
+  }
+
+  .title{
+    font-size: 1.8rem;
+    padding: 30px;
+  }
+
+  .profile{
+    font-size: 1.8rem;
+    margin: 0;
+  }
+
+  .photo{
+    margin-top: 10px;
+  }
+
+  .left-content{
+    width: 100%;
+  }
+
+  .right-content{
+    margin: 5px 0;
+    padding: 8px;
+  }
+
+  .introduction{
+    font-size: 0.3rem;
+  }
+
+  .answer{
+    font-size: 0.3rem;
+  }
+
+  .right-content:before{
+    display: none;
+  }
+
+  .right-content:after{
+    display: none;
+  }
+
+  .right-box{
+    width: 100%;
+  }
+
+  .big-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    margin-top: 0;
+  }
+
+  .collection{
+    font-size: 2rem;
+  }
+
+  .collection-img{
+    height: 200px;
+    width: 250px;
+  }
+
+  .collection-box{
+    font-size: 0.4rem;
+    margin-top: 10px;
+  }
+
+  .collection-wrap{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .image-text{
+    font-size: 0.7rem;
+    padding: 10px;
+  }
+
+
+
+
+}
+
+@media screen and (min-width:700px)and (max-width:999px){
+  .sub-title{
+    font-size: 0.9rem;
+  }
+
+  .title{
+    font-size: 2.5rem;
+    padding: 50px;
+  }
+
+  .profile{
+    font-size: 2.5rem;
+  }
+
+  .photo{
+    font-size: 2.5rem;
+  }
+
+  .introduction{
+    font-size: 0.4rem;
+  }
+
+  .answer{
+    font-size: 0.4rem;
+  }
+
+  .right-content:before{
+    display: none;
+  }
+
+  .right-content{
+    margin: 15px 0;
+    padding:15px;
+  }
+
+  .right-content:after{
+    display: none;
+  }
+
+  .right-box{
+    width: 100%;
+  }
+
+  .big-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    margin-top: 0;
+  }
+
+  .collection{
+    font-size: 3rem;
+  }
+
+  .collection-box{
+    font-size: 0.7rem;
+    margin-top: 50px;
+  }
+
+  .collection-wrap{
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .image-text{
+    font-size: 1rem;
+    padding: 30px;
+  }
+}
+
+@media screen and (min-width:1000px){
+  .sub-title{
+    font-size: 1.2rem;
+  }
+
+  .title{
+    font-size: 3rem;
+    padding-top: 100px;
+  }
+
+  .profile{
+    font-size: 3rem;
+  }
+
+  .photo{
+    font-size: 3rem;
+  }
+
+  .left-content{
+    width: 55%;
+    text-align: center;
+  }
+
+  .introduction{
+    font-size: 1rem;
+  }
+
+  .answer{
+    font-size: 0.9rem;
+  }
+
+  .right-content{
+    margin: 15px 0;
+    padding: 15px;
+  }
+
+  .right-content:before{
+    display: block;
+  }
+
+  .right-content:after{
+    display: block;
+  }
+
+  .right-box{
+    width: 45%;
+  }
+
+  .big-content{
+    font-size: 3.5rem;
+    display: flex;
+    flex-direction: row;
+    // justify-content: space-around;
+  }
+
+  .collection{
+    font-size: 3.5rem;
+  }
+
+  .image-box{
+    margin: 6%;
+  }
+
+  .collection-img{
+    height: 280px;
+    width: 300px;
+  }
+
+  .collection-box{
+    font-size: 1rem;
+    width: 33%;
+  }
+
+  .collection-wrap{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+  }
+
+  .image-text{
+    font-size: 1.2rem;
+    padding: 50px;
+  }
+}
+
+
