--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -236,7 +236,6 @@ body {
   color: #333333;
   font-size: 50px;
   height: 20vh;
-  line-height: 270px;
 }
 
 .box .gallerywrap .gallerybox {
@@ -247,6 +246,28 @@ body {
 
 .box .gallerywrap .gallerybox .image-text {
   font-family: 'ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
+}
+
+.footer {
+  background-color: #ffd701;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  line-height: 60px;
+}
+
+.footer .niko-chan {
+  width: 50px;
+  height: 40px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.footer .footer-name {
+  margin: 0;
 }
 
 :root {
